Repository redesign. Perceptron and SimpleSNN classes have own files.

--- a/notebooks/simple-perceptron.ipynb
+++ b/notebooks/simple-perceptron.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -10,7 +10,10 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import torch.utils.data as data\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from tqdm import trange\n",
+    "from src.models.error_measures import get_accuracy\n",
+    "from src.models.TwoLayerPerceptron import TwoLayerPerceptron"
    ],
    "metadata": {
     "collapsed": false,
@@ -21,13 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "device(type='cuda')"
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,13 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
-      "text/plain": "<torch._C.Generator at 0x16eb81422f0>"
+      "text/plain": "<torch._C.Generator at 0x20a96d6d870>"
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,69 +74,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Model"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "outputs": [],
-   "source": [
-    "class SimplePredictor(nn.Module):\n",
-    "    def __init__(self, num_inputs, num_hidden, num_outputs):\n",
-    "        super().__init__()\n",
-    "        self.linear1 = nn.Linear(num_inputs, num_hidden)\n",
-    "        self.bn1 = nn.BatchNorm1d(num_hidden)\n",
-    "        self.fn1 = nn.LeakyReLU()\n",
-    "        #self.d1 = nn.Dropout(0.3)\n",
-    "        self.linear2 = nn.Linear(num_hidden, num_outputs)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = self.linear1(x)\n",
-    "        x = self.bn1(x)\n",
-    "        x = self.fn1(x)\n",
-    "        #x = self.d1(x)\n",
-    "        x = self.linear2(x)\n",
-    "        return x"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [],
-   "source": [
-    "def get_accuracy(model, loader, pct_close):\n",
-    "    correct = 0\n",
-    "    total = 0\n",
-    "    model.eval()\n",
-    "    for x, labels in loader:\n",
-    "        x, labels = x.to(device), labels.to(device)\n",
-    "        output = model(x)\n",
-    "        pred = torch.round(output)\n",
-    "        correct += (torch.abs(pred-labels.view_as(pred)) < torch.abs(pct_close * labels.view_as(pred))).sum().item()\n",
-    "        # correct += (torch.abs(pred-labels.view_as(pred)) < pct_close).sum().item()\n",
-    "        total += x.shape[0]\n",
-    "    return correct / total"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "## Data"
    ],
    "metadata": {
@@ -142,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "data06 = pd.read_csv(\"../data/processed/target06.csv\")"
@@ -156,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "all_data = data.TensorDataset(torch.from_numpy((data06.values[:,:-1] - data06.values[:,:-1].min(0)) / data06.values[:,:-1].ptp(0)).float(), torch.from_numpy(data06.values[:,-1]).float())  # with normalization\n",
@@ -171,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "data_loader = data.DataLoader(train_dataset, batch_size=32, shuffle=True, drop_last=True)\n",
@@ -196,23 +136,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SimplePredictor(\n",
-      "  (linear1): Linear(in_features=8, out_features=500, bias=True)\n",
+      "TwoLayerPerceptron(\n",
+      "  (lin1): Linear(in_features=8, out_features=500, bias=True)\n",
       "  (bn1): BatchNorm1d(500, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (fn1): LeakyReLU(negative_slope=0.01)\n",
-      "  (linear2): Linear(in_features=500, out_features=1, bias=True)\n",
+      "  (relu): LeakyReLU(negative_slope=0.01)\n",
+      "  (lin2): Linear(in_features=500, out_features=1, bias=True)\n",
       ")\n"
      ]
     }
    ],
    "source": [
-    "model = SimplePredictor(num_inputs=8, num_hidden=500, num_outputs=1)\n",
+    "model = TwoLayerPerceptron(num_inputs=8, num_hidden=500, num_outputs=1)\n",
     "model.to(device)\n",
     "print(model)"
    ],
@@ -225,12 +165,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "loss_fun = nn.MSELoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.00001)\n",
-    "epochs = 300"
+    "epochs = 350"
    ],
    "metadata": {
     "collapsed": false,
@@ -250,58 +190,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 1/350 [00:05<32:06,  5.52s/it]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0, loss: 5.23e+02, acc: 0.0\n",
-      "Epoch: 10, loss: 3.77e+02, acc: 0.028901734104046242\n",
-      "Epoch: 20, loss: 1.58e+02, acc: 0.09132947976878612\n",
-      "Epoch: 30, loss: 1.84e+02, acc: 0.19884393063583816\n",
-      "Epoch: 40, loss: 2.49e+02, acc: 0.2682080924855491\n",
-      "Epoch: 50, loss: 1.83e+02, acc: 0.2832369942196532\n",
-      "Epoch: 60, loss: 1.38e+02, acc: 0.28670520231213875\n",
-      "Epoch: 70, loss: 47.2, acc: 0.30057803468208094\n",
-      "Epoch: 80, loss: 50.5, acc: 0.3063583815028902\n",
-      "Epoch: 90, loss: 1.69e+02, acc: 0.31445086705202313\n",
-      "Epoch: 100, loss: 85.1, acc: 0.3202312138728324\n",
-      "Epoch: 110, loss: 1.38e+02, acc: 0.3179190751445087\n",
-      "Epoch: 120, loss: 1.53e+02, acc: 0.3179190751445087\n",
-      "Epoch: 130, loss: 1.74e+02, acc: 0.3225433526011561\n",
-      "Epoch: 140, loss: 45.3, acc: 0.32947976878612717\n",
-      "Epoch: 150, loss: 93.8, acc: 0.3421965317919075\n",
-      "Epoch: 160, loss: 98.5, acc: 0.3352601156069364\n",
-      "Epoch: 170, loss: 1.23e+02, acc: 0.33872832369942196\n",
-      "Epoch: 180, loss: 67.9, acc: 0.3421965317919075\n",
-      "Epoch: 190, loss: 58.1, acc: 0.3398843930635838\n",
-      "Epoch: 200, loss: 73.5, acc: 0.33872832369942196\n",
-      "Epoch: 210, loss: 94.0, acc: 0.3491329479768786\n",
-      "Epoch: 220, loss: 1.06e+02, acc: 0.35260115606936415\n",
-      "Epoch: 230, loss: 49.1, acc: 0.34335260115606936\n",
-      "Epoch: 240, loss: 98.4, acc: 0.3398843930635838\n",
-      "Epoch: 250, loss: 75.3, acc: 0.35260115606936415\n",
-      "Epoch: 260, loss: 50.8, acc: 0.3468208092485549\n",
-      "Epoch: 270, loss: 70.7, acc: 0.3514450867052023\n",
-      "Epoch: 280, loss: 1.61e+02, acc: 0.34797687861271676\n",
-      "Epoch: 290, loss: 81.7, acc: 0.3583815028901734\n"
+      "Epoch: 0, loss: 5.23e+02, acc: 0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 15%|█▍        | 51/350 [00:30<02:18,  2.16it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 50, loss: 1.3e+02, acc: 0.2786127167630058\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 29%|██▉       | 101/350 [00:54<02:04,  2.00it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 100, loss: 3.12e+02, acc: 0.3213872832369942\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 43%|████▎     | 151/350 [01:17<01:38,  2.02it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 150, loss: 76.4, acc: 0.32716763005780347\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 57%|█████▋    | 201/350 [01:41<01:13,  2.02it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 200, loss: 55.4, acc: 0.34797687861271676\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 72%|███████▏  | 251/350 [02:04<00:42,  2.31it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 250, loss: 63.6, acc: 0.34797687861271676\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 86%|████████▌ | 301/350 [02:29<00:23,  2.11it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 300, loss: 51.7, acc: 0.35722543352601155\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 350/350 [02:54<00:00,  2.01it/s]\n"
      ]
     }
    ],
    "source": [
-    "for epoch in range(epochs):\n",
+    "for epoch in trange(epochs):\n",
     "    model.train()  # reset in get_accuracy\n",
-    "    for data_inputs, data_labels in data_loader:\n",
-    "        data_inputs = data_inputs.to(device)\n",
-    "        data_labels = data_labels.to(device)\n",
-    "        preds = model(data_inputs).squeeze(dim=1)\n",
-    "        loss = loss_fun(preds, data_labels)\n",
+    "    for data,targets in data_loader:\n",
+    "        data = data.to(device)\n",
+    "        targets = targets.to(device)\n",
+    "        preds = model(data).squeeze(dim=1)\n",
+    "        loss = loss_fun(preds, targets)\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "    if epoch % 10 == 0:\n",
-    "        print(f\"Epoch: {epoch}, loss: {loss.item():.3}, acc: {get_accuracy(model, valid_data_loader, 0.2)}\")"
+    "    if epoch % 50 == 0:\n",
+    "        print(f\"Epoch: {epoch}, loss: {loss.item():.3}, acc: {get_accuracy(model, valid_data_loader,  device=device, pct_close=0.2)}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -312,21 +321,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "0.37745664739884394"
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "percent = 0.2\n",
-    "model.eval()\n",
-    "get_accuracy(model, test_data_loader, percent)"
+    "get_accuracy(model, test_data_loader, device=device, pct_close=0.2)"
    ],
    "metadata": {
     "collapsed": false,
@@ -337,19 +335,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "tensor([40.0500,  9.5800, 22.6400, 22.3900, 23.3000, 23.6900,  7.2200, 41.8800,\n        19.8900, 24.8700, 26.8000, 40.5800,  8.7200,  6.8800, 22.7300,  8.4400,\n         3.5300, 10.3800,  9.7800, 19.7100, 83.8100, 10.5500, 15.8000, 31.9000,\n        38.6200, 13.6400, 38.6200, 18.3900, 38.8800,  4.8600, 32.4600, 19.3700],\n       device='cuda:0')"
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "data_labels"
+    "targets"
    ],
    "metadata": {
     "collapsed": false,
@@ -360,17 +349,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "tensor([ 23.2516,  13.0853,  24.1150,  16.7987,  14.6763,  15.1937,  10.3775,\n         37.3490,  16.2988,   8.0150,  14.8764,  25.1121,   7.1874,   8.6581,\n         28.2685,  17.6605,  15.7314,  13.8994,  17.3974,  13.7495, 106.7835,\n         15.5437,  18.8969,  11.7963,  29.6159,  19.3711,  27.8761,  13.9124,\n         17.4818,   7.0095,  22.2469,  15.4811], device='cuda:0',\n       grad_fn=<SqueezeBackward1>)"
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "preds"
    ],
@@ -383,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
