--- a/notebooks/simple-snn.ipynb
+++ b/notebooks/simple-snn.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.utils.data as data\n",
-    "import snntorch as snn\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from tqdm import trange\n",
+    "from src.models.TwoLayerLeakySNN import TwoLayerLeaky"
    ],
    "metadata": {
     "collapsed": false,
@@ -21,13 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "device(type='cuda')"
      },
-     "execution_count": 542,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,13 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
-      "text/plain": "<torch._C.Generator at 0x2318f9132f0>"
+      "text/plain": "<torch._C.Generator at 0x25fb570e830>"
      },
-     "execution_count": 543,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,51 +70,8 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "## Model"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
    "cell_type": "code",
-   "execution_count": 544,
-   "outputs": [],
-   "source": [
-    "class SimpleSNNPredictor(nn.Module):\n",
-    "    def __init__(self, num_inputs, num_hidden, beta=0.95, num_steps=25):\n",
-    "        super().__init__()\n",
-    "        self.num_steps = num_steps\n",
-    "\n",
-    "        # Initialize layers\n",
-    "        self.fc1 = nn.Linear(num_inputs, num_hidden)\n",
-    "        self.lif1 = snn.Leaky(beta=beta)\n",
-    "        self.fc2 = nn.Linear(num_hidden, num_outputs)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "\n",
-    "        # Initialize hidden states at t=0\n",
-    "        mem1 = self.lif1.init_leaky()\n",
-    "\n",
-    "        for step in range(self.num_steps):\n",
-    "            cur1 = self.fc1(x)\n",
-    "            spk1, mem1 = self.lif1(cur1, mem1)\n",
-    "            cur2 = self.fc2(spk1)\n",
-    "\n",
-    "        return cur2"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def get_accuracy(model, loader, pct_close):\n",
@@ -137,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "batch_size = 32\n",
@@ -161,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "data06 = pd.read_csv(\"../data/processed/target06.csv\")"
@@ -175,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "all_data = data.TensorDataset(torch.from_numpy((data06.values[:,:-1] - data06.values[:,:-1].min(0)) / data06.values[:,:-1].ptp(0)).float(), torch.from_numpy(data06.values[:,-1]).float())  # with normalization\n",
@@ -190,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "train_loader = data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True, drop_last=True)\n",
@@ -215,13 +173,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SimpleSNNPredictor(\n",
+      "TwoLayerLeaky(\n",
       "  (fc1): Linear(in_features=8, out_features=1200, bias=True)\n",
       "  (lif1): Leaky()\n",
       "  (fc2): Linear(in_features=1200, out_features=1, bias=True)\n",
@@ -230,11 +188,11 @@
     }
    ],
    "source": [
-    "num_inputs=8\n",
-    "num_hidden=1200\n",
-    "num_outputs=1\n",
+    "inputs=8\n",
+    "hidden=1200\n",
+    "outputs=1\n",
     "\n",
-    "model = SimpleSNNPredictor(num_inputs, num_hidden, num_outputs)\n",
+    "model = TwoLayerLeaky(inputs, hidden, outputs, 0.95, 20)\n",
     "model.to(device)\n",
     "print(model)"
    ],
@@ -247,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3, betas=(0.9, 0.999))\n",
@@ -272,38 +230,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 11,
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  5%|▍         | 1/21 [00:04<01:37,  4.86s/it]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0, loss: 4.53e+02, acc: 0.2254335260115607\n",
-      "Epoch: 2, loss: 2.25e+02, acc: 0.2705202312138728\n",
-      "Epoch: 4, loss: 88.3, acc: 0.3132947976878613\n",
-      "Epoch: 6, loss: 50.6, acc: 0.330635838150289\n",
-      "Epoch: 8, loss: 72.4, acc: 0.32716763005780347\n",
-      "Epoch: 10, loss: 46.4, acc: 0.3630057803468208\n",
-      "Epoch: 12, loss: 70.1, acc: 0.3375722543352601\n",
-      "Epoch: 14, loss: 84.3, acc: 0.34566473988439306\n",
-      "Epoch: 16, loss: 1.2e+02, acc: 0.3283236994219653\n",
-      "Epoch: 18, loss: 80.1, acc: 0.34335260115606936\n",
-      "Epoch: 20, loss: 83.9, acc: 0.35953757225433525\n",
-      "Epoch: 22, loss: 48.5, acc: 0.3560693641618497\n",
-      "Epoch: 24, loss: 96.1, acc: 0.34104046242774566\n",
-      "Epoch: 26, loss: 58.5, acc: 0.36647398843930634\n",
-      "Epoch: 28, loss: 39.9, acc: 0.34104046242774566\n",
-      "Epoch: 30, loss: 77.1, acc: 0.3468208092485549\n"
+      "Epoch: 0, loss: 4.35e+02, acc: 0.2277456647398844\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 14%|█▍        | 3/21 [00:11<01:04,  3.56s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 2, loss: 2.32e+02, acc: 0.27398843930635836\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 24%|██▍       | 5/21 [00:17<00:55,  3.44s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 4, loss: 1.12e+02, acc: 0.315606936416185\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 33%|███▎      | 7/21 [00:24<00:48,  3.44s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 6, loss: 47.1, acc: 0.3352601156069364\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 43%|████▎     | 9/21 [00:31<00:41,  3.43s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 8, loss: 80.2, acc: 0.3213872832369942\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 52%|█████▏    | 11/21 [00:38<00:35,  3.54s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 10, loss: 51.4, acc: 0.3468208092485549\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 62%|██████▏   | 13/21 [00:45<00:27,  3.49s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 12, loss: 89.9, acc: 0.35953757225433525\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 71%|███████▏  | 15/21 [00:52<00:20,  3.46s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 14, loss: 77.9, acc: 0.34104046242774566\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 81%|████████  | 17/21 [00:58<00:13,  3.42s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 16, loss: 1.2e+02, acc: 0.3468208092485549\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 90%|█████████ | 19/21 [01:05<00:06,  3.39s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 18, loss: 78.4, acc: 0.34104046242774566\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 21/21 [01:12<00:00,  3.44s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 20, loss: 88.0, acc: 0.353757225433526\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "num_epochs = 31\n",
+    "num_epochs = 21\n",
     "loss_hist = []\n",
     "test_loss_hist = []\n",
     "\n",
     "# Outer training loop\n",
-    "for epoch in range(num_epochs):\n",
+    "for epoch in trange(num_epochs):\n",
     "    for data, targets in train_loader:\n",
     "        data = data.to(device)\n",
     "        targets = targets.to(device)\n",
@@ -334,13 +431,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.38439306358381503"
+      "text/plain": "0.39710982658959537"
      },
-     "execution_count": 553,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,13 +456,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([21.5200,  6.6400, 47.7700,  9.8000, 16.3400,  8.0200, 22.2200, 16.0000,\n        26.5700, 14.7100, 14.2600, 46.8500, 12.0400, 13.7400, 10.8100,  7.8400,\n        10.3400, 18.1300, 25.9300, 19.9300, 50.9400, 12.8100, 32.3200, 25.5500,\n        43.8000,  7.4500, 21.7900, 30.9200, 18.9300, 34.4500, 70.2600, 29.7400],\n       device='cuda:0')"
+      "text/plain": "tensor([17.2600, 40.9700, 17.5000, 14.8100, 23.4800, 11.5400, 56.5900, 15.5000,\n        18.7700,  6.9900, 27.5500, 17.2400, 12.7900, 13.4600,  5.5400,  8.7900,\n        16.5200,  7.4300, 59.6500, 21.2600,  6.4300, 25.1300, 34.4500, 57.2000,\n        37.3600, 24.4300, 15.4200, 21.3900, 13.5400,  5.9400,  9.3500, 53.5600],\n       device='cuda:0')"
      },
-     "execution_count": 554,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,13 +479,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([13.1635, 11.9892, 42.9729, 19.8671, 13.2309, 14.0652, 21.1927, 15.0116,\n        29.9898, 14.6159, 15.4557, 35.8256, 24.2308,  7.5534, 18.2664,  8.2213,\n        28.8393, 20.8042, 26.4876, 19.1598, 50.0451, 18.9561, 35.2028, 23.3641,\n        32.4731, 24.9270, 30.6722, 28.0178, 37.1176, 51.6018, 60.0072, 16.8827],\n       device='cuda:0', grad_fn=<SqueezeBackward1>)"
+      "text/plain": "tensor([11.8930, 28.9670, 24.6963, 15.9994, 10.6815, 10.8053, 43.1768, 22.8555,\n        22.3055,  8.9332, 23.5829, 15.4053, 15.3240, 33.3839,  8.9404, 19.2472,\n        21.0731,  6.0380, 30.9477, 21.0582, 14.3365, 27.1071, 29.6288, 39.4087,\n        25.7466, 15.3594, 12.2496, 14.6468, 13.0393, 11.1612, 11.9123, 45.1264],\n       device='cuda:0', grad_fn=<SqueezeBackward1>)"
      },
-     "execution_count": 555,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,18 +493,6 @@
    "source": [
     "preds"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 555,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
