Another reorganization. Moved training loop to function in train_model.py

--- a/notebooks/simple-perceptron.ipynb
+++ b/notebooks/simple-perceptron.ipynb
@@ -2,18 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
     "import torch.utils.data as data\n",
     "import pandas as pd\n",
-    "from tqdm import trange\n",
-    "from src.models.error_measures import get_accuracy\n",
-    "from src.models.TwoLayerPerceptron import TwoLayerPerceptron"
+    "from src.error_measures import get_accuracy\n",
+    "from src.models import TwoLayerPerceptron\n",
+    "from src.train_model import training_loop"
    ],
    "metadata": {
     "collapsed": false,
@@ -24,13 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "device(type='cuda')"
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,13 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
-      "text/plain": "<torch._C.Generator at 0x20a96d6d870>"
+      "text/plain": "<torch._C.Generator at 0x15f83cc8870>"
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "data06 = pd.read_csv(\"../data/processed/target06.csv\")"
@@ -96,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "all_data = data.TensorDataset(torch.from_numpy((data06.values[:,:-1] - data06.values[:,:-1].min(0)) / data06.values[:,:-1].ptp(0)).float(), torch.from_numpy(data06.values[:,-1]).float())  # with normalization\n",
@@ -111,12 +109,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "outputs": [],
    "source": [
-    "data_loader = data.DataLoader(train_dataset, batch_size=32, shuffle=True, drop_last=True)\n",
-    "test_data_loader = data.DataLoader(test_dataset, batch_size=256, shuffle=False, drop_last=False)\n",
-    "valid_data_loader = data.DataLoader(valid_dataset, batch_size=256, shuffle=False, drop_last=False)"
+    "train_loader = data.DataLoader(train_dataset, batch_size=32, shuffle=True, drop_last=True)\n",
+    "test_loader = data.DataLoader(test_dataset, batch_size=256, shuffle=False, drop_last=False)\n",
+    "valid_loader = data.DataLoader(valid_dataset, batch_size=256, shuffle=False, drop_last=False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -136,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -153,7 +151,6 @@
    ],
    "source": [
     "model = TwoLayerPerceptron(num_inputs=8, num_hidden=500, num_outputs=1)\n",
-    "model.to(device)\n",
     "print(model)"
    ],
    "metadata": {
@@ -165,152 +162,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [],
-   "source": [
-    "loss_fun = nn.MSELoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.00001)\n",
-    "epochs = 350"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Training"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 1/350 [00:05<32:06,  5.52s/it]"
+      "100%|██████████| 50/50 [00:25<00:00,  1.93it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0, loss: 5.23e+02, acc: 0.0\n"
+      "Accuracy on validation dataset: 39.653179190751445%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 15%|█▍        | 51/350 [00:30<02:18,  2.16it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 50, loss: 1.3e+02, acc: 0.2786127167630058\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 29%|██▉       | 101/350 [00:54<02:04,  2.00it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 100, loss: 3.12e+02, acc: 0.3213872832369942\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 43%|████▎     | 151/350 [01:17<01:38,  2.02it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 150, loss: 76.4, acc: 0.32716763005780347\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 57%|█████▋    | 201/350 [01:41<01:13,  2.02it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 200, loss: 55.4, acc: 0.34797687861271676\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 72%|███████▏  | 251/350 [02:04<00:42,  2.31it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 250, loss: 63.6, acc: 0.34797687861271676\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 86%|████████▌ | 301/350 [02:29<00:23,  2.11it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 300, loss: 51.7, acc: 0.35722543352601155\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 350/350 [02:54<00:00,  2.01it/s]\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "for epoch in trange(epochs):\n",
-    "    model.train()  # reset in get_accuracy\n",
-    "    for data,targets in data_loader:\n",
-    "        data = data.to(device)\n",
-    "        targets = targets.to(device)\n",
-    "        preds = model(data).squeeze(dim=1)\n",
-    "        loss = loss_fun(preds, targets)\n",
-    "        optimizer.zero_grad()\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "    if epoch % 50 == 0:\n",
-    "        print(f\"Epoch: {epoch}, loss: {loss.item():.3}, acc: {get_accuracy(model, valid_data_loader,  device=device, pct_close=0.2)}\")"
+    "training_loop(model, train_loader, valid_loader, device, num_epochs=50)"
    ],
    "metadata": {
     "collapsed": false,
@@ -321,38 +198,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "get_accuracy(model, test_data_loader, device=device, pct_close=0.2)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.41734104046242776"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "targets"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
-    "preds"
+    "get_accuracy(model, test_loader, device=device, pct_close=0.2)"
    ],
    "metadata": {
     "collapsed": false,
