--- a/notebooks/simple-snn.ipynb
+++ b/notebooks/simple-snn.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n",
-    "import torch.nn as nn\n",
     "import torch.utils.data as data\n",
     "import pandas as pd\n",
-    "from tqdm import trange\n",
-    "from src.models.TwoLayerLeakySNN import TwoLayerLeaky"
+    "from src.error_measures import get_accuracy\n",
+    "from src.models import TwoLayerLeaky\n",
+    "from src.train_model import training_loop"
    ],
    "metadata": {
     "collapsed": false,
@@ -22,13 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "outputs": [
     {
      "data": {
       "text/plain": "device(type='cuda')"
      },
-     "execution_count": 2,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,13 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "outputs": [
     {
      "data": {
-      "text/plain": "<torch._C.Generator at 0x25fb570e830>"
+      "text/plain": "<torch._C.Generator at 0x2bc421087b0>"
      },
-     "execution_count": 3,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,34 +71,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "outputs": [],
    "source": [
-    "def get_accuracy(model, loader, pct_close):\n",
-    "    correct = 0\n",
-    "    total = 0\n",
-    "    model.eval()\n",
-    "    for x, labels in loader:\n",
-    "        x, labels = x.to(device), labels.to(device)\n",
-    "        output = model(x)\n",
-    "        pred = torch.round(output)\n",
-    "        correct += (torch.abs(pred-labels.view_as(pred)) < torch.abs(pct_close * labels.view_as(pred))).sum().item()\n",
-    "        total += x.shape[0]\n",
-    "    return correct / total"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
-   "source": [
-    "batch_size = 32\n",
+    "batch_size = 64\n",
     "dtype = torch.float"
    ],
    "metadata": {
@@ -119,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "outputs": [],
    "source": [
     "data06 = pd.read_csv(\"../data/processed/target06.csv\")"
@@ -133,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "outputs": [],
    "source": [
     "all_data = data.TensorDataset(torch.from_numpy((data06.values[:,:-1] - data06.values[:,:-1].min(0)) / data06.values[:,:-1].ptp(0)).float(), torch.from_numpy(data06.values[:,-1]).float())  # with normalization\n",
@@ -148,12 +124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "outputs": [],
    "source": [
     "train_loader = data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True, drop_last=True)\n",
-    "test_loader = data.DataLoader(test_dataset, batch_size=batch_size, shuffle=False, drop_last=False)\n",
-    "valid_loader = data.DataLoader(valid_dataset, batch_size=batch_size, shuffle=False, drop_last=False)"
+    "test_loader = data.DataLoader(test_dataset, batch_size=256, shuffle=False, drop_last=False)\n",
+    "valid_loader = data.DataLoader(valid_dataset, batch_size=256, shuffle=False, drop_last=False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -173,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "outputs": [
     {
      "name": "stdout",
@@ -188,12 +164,7 @@
     }
    ],
    "source": [
-    "inputs=8\n",
-    "hidden=1200\n",
-    "outputs=1\n",
-    "\n",
-    "model = TwoLayerLeaky(inputs, hidden, outputs, 0.95, 20)\n",
-    "model.to(device)\n",
+    "model = TwoLayerLeaky(num_inputs=8, num_hidden=1200, num_outputs=1, beta=0.95, num_steps=20)\n",
     "print(model)"
    ],
    "metadata": {
@@ -205,185 +176,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [],
-   "source": [
-    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3, betas=(0.9, 0.999))\n",
-    "loss_fun = nn.MSELoss()\n",
-    "num_steps = 20"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Training"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  5%|▍         | 1/21 [00:04<01:37,  4.86s/it]"
+      "100%|██████████| 30/30 [00:51<00:00,  1.73s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0, loss: 4.35e+02, acc: 0.2277456647398844\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 14%|█▍        | 3/21 [00:11<01:04,  3.56s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 2, loss: 2.32e+02, acc: 0.27398843930635836\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 24%|██▍       | 5/21 [00:17<00:55,  3.44s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 4, loss: 1.12e+02, acc: 0.315606936416185\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 33%|███▎      | 7/21 [00:24<00:48,  3.44s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 6, loss: 47.1, acc: 0.3352601156069364\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 43%|████▎     | 9/21 [00:31<00:41,  3.43s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 8, loss: 80.2, acc: 0.3213872832369942\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 52%|█████▏    | 11/21 [00:38<00:35,  3.54s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 10, loss: 51.4, acc: 0.3468208092485549\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 62%|██████▏   | 13/21 [00:45<00:27,  3.49s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 12, loss: 89.9, acc: 0.35953757225433525\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 71%|███████▏  | 15/21 [00:52<00:20,  3.46s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 14, loss: 77.9, acc: 0.34104046242774566\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 81%|████████  | 17/21 [00:58<00:13,  3.42s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 16, loss: 1.2e+02, acc: 0.3468208092485549\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 90%|█████████ | 19/21 [01:05<00:06,  3.39s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 18, loss: 78.4, acc: 0.34104046242774566\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 21/21 [01:12<00:00,  3.44s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 20, loss: 88.0, acc: 0.353757225433526\n"
+      "Accuracy on validation dataset: 36.06936416184971%\n"
      ]
     },
     {
@@ -395,32 +201,7 @@
     }
    ],
    "source": [
-    "num_epochs = 21\n",
-    "loss_hist = []\n",
-    "test_loss_hist = []\n",
-    "\n",
-    "# Outer training loop\n",
-    "for epoch in trange(num_epochs):\n",
-    "    for data, targets in train_loader:\n",
-    "        data = data.to(device)\n",
-    "        targets = targets.to(device)\n",
-    "\n",
-    "    # forward pass\n",
-    "        model.train()\n",
-    "        preds = model(data).squeeze(dim=1)\n",
-    "\n",
-    "        loss = loss_fun(preds, targets)\n",
-    "\n",
-    "        # Gradient calculation + weight update\n",
-    "        optimizer.zero_grad()\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        # Store loss history for future plotting\n",
-    "        #loss_hist.append(loss.item())\n",
-    "\n",
-    "    if epoch % 2 == 0:\n",
-    "        print(f\"Epoch: {epoch}, loss: {loss.item():.3}, acc: {get_accuracy(model, valid_loader, 0.2)}\")"
+    "training_loop(model, train_loader, valid_loader, device, num_epochs=30)"
    ],
    "metadata": {
     "collapsed": false,
@@ -431,67 +212,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.39710982658959537"
+      "text/plain": "0.38670520231213873"
      },
-     "execution_count": 12,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "percent = 0.2\n",
-    "model.eval()\n",
-    "get_accuracy(model, test_loader, percent)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "tensor([17.2600, 40.9700, 17.5000, 14.8100, 23.4800, 11.5400, 56.5900, 15.5000,\n        18.7700,  6.9900, 27.5500, 17.2400, 12.7900, 13.4600,  5.5400,  8.7900,\n        16.5200,  7.4300, 59.6500, 21.2600,  6.4300, 25.1300, 34.4500, 57.2000,\n        37.3600, 24.4300, 15.4200, 21.3900, 13.5400,  5.9400,  9.3500, 53.5600],\n       device='cuda:0')"
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "targets"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "tensor([11.8930, 28.9670, 24.6963, 15.9994, 10.6815, 10.8053, 43.1768, 22.8555,\n        22.3055,  8.9332, 23.5829, 15.4053, 15.3240, 33.3839,  8.9404, 19.2472,\n        21.0731,  6.0380, 30.9477, 21.0582, 14.3365, 27.1071, 29.6288, 39.4087,\n        25.7466, 15.3594, 12.2496, 14.6468, 13.0393, 11.1612, 11.9123, 45.1264],\n       device='cuda:0', grad_fn=<SqueezeBackward1>)"
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "preds"
+    "get_accuracy(model, test_loader, device=device, pct_close=0.2)"
    ],
    "metadata": {
     "collapsed": false,
